紅利桃子 - 活動內容更新

--- a/iiot/peach/peach777.html
+++ b/iiot/peach/peach777.html
@@ -157,7 +157,8 @@
                         <img class="" src="images/777/shop.jpg" width="100%" alt="新招花點 線上票券商城">
                     </div>
                     <div class="card no-bg" id="link04">
-                        <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
+                        <a class="a-an" href="https://lihi3.com/k7392"><img class="" src="images/777/logos-1122.png" width="100%"
+                                alt="品牌票券"></a>
                     </div>
                     <Br>
                     <div class="card">
