--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -140,11 +140,22 @@
                     </div>
                 </section>
                 <section class="event-content" id="goThe01">
-                    <div class="info" style="padding-bottom: 40px;">
+                    <!-- <div class="info" style="padding-bottom: 40px;">
                         <div class="slider-banner">
                             <a href="https://lihi3.com/BYXkv"
                                 target="_blank">
                                 <img width="100%" src="images/btn-join.png" alt="加入紅利桃子 （掃描QRcode或點我加入）">
+                            </a>
+                        </div>
+                    </div> -->
+                    <div class="card">
+                        <div>
+                            <a class="a-an" href="https://lihi3.com/OrJBz" target="_blank"
+                                style="padding:0px 15px; max-width: 800px; margin: 0 auto;">
+                                <img src="images/777/join-peach.png" width="100%" alt="點我前往紅利桃子">
+                            </a>
+                            <a class="a-an" href="https://point.tycg.gov.tw/peach777.html" target="_blank" style="">
+                                <img src="images/777/img-everyday.png" width="100%" alt="天天拿點不手軟">
                             </a>
                         </div>
                     </div>
@@ -210,7 +221,8 @@
                             </a>
                         </div>
                         <div style="padding-top:20px;">
-                            <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
+                            <a class="a-an" href="https://lihi3.com/k7392"><img class="" src="images/777/logos-1122.png" width="100%"
+                                    alt="品牌票券"></a>
                         </div>
                     </div>
                     <div class="card">
