--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -152,6 +152,13 @@
                             <a class="a-an" href="https://open.tycard.app/mkt/events/logistic/quotation" target="_blank" style="padding:20px 15px 15px 15px;">
                                 <img src="images/img-event-point.png" width="100%" alt="紅利桃子 - 點點送">
                             </a>
+                            <a class="a-an" href="https://lihi3.com/OrJBz" target="_blank"
+                                style="padding:0px 15px; max-width: 800px; margin: 0 auto;">
+                                <img src="images/777/join-peach.png" width="100%" alt="點我前往紅利桃子">
+                            </a>
+                            <a class="a-an" href="https://point.tycg.gov.tw/peach777.html" target="_blank" style="">
+                                <img src="images/777/img-everyday.png" width="100%" alt="天天拿點不手軟">
+                            </a>
                         </div>
                     </div>
                     <div class="card" id="link04">
