--- a/iiot/peach/ticket_mall.html
+++ b/iiot/peach/ticket_mall.html
@@ -150,7 +150,7 @@
                          <img class="" src="images/777/mall-03.png" width="100%" alt="點數消費抽好禮">
                     </div>
                     <div class="card no-bg" id="link04">
-                        <img class="" src="images/777/logos.png" width="100%" alt="品牌票券">
+                        <a class="a-an" href="https://lihi3.com/k7392"><img class="" src="images/777/logos-1122.png" width="100%" alt="品牌票券"></a>
                     </div>
                     <Br>
                     <div class="card" id="link05"> 
