紅利桃子777放大祭-抽獎頁-提整介面大小

--- a/iiot/lottery-777/index-777.html
+++ b/iiot/lottery-777/index-777.html
@@ -35,7 +35,7 @@
                     <span>Gogoro<br>電動單車</span>
                 </a>
                 <a class="box">
-                    <span>LG蒸氣電子衣櫥</span>
+                    <span>LG蒸氣<br>電子衣櫥</span>
                 </a>
             </div>
             <div class="gift-list size-a">
