紅利桃子 - 新增條款說明

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -295,6 +295,9 @@
                                 <li>
                                     <p>經發局「你吃飯我買單」、觀旅局「桃園旅宿千元住宿金搶先用」、農業局「有機蔬菜箱」活動規則請洽各局處洽詢，本單位僅針對得獎名單進行點數發放及針對點數使用及取得問題進行回覆。</p>
                                 </li>
+                                <li>
+                                    <p>如獎項缺貨、停產等原因導致無法供應，將由等值或相似商品進行替換。</p>
+                                </li>
                             </ul>
                         </div>
                     </div>
