--- a/iiot/peach/peach777.html
+++ b/iiot/peach/peach777.html
@@ -161,6 +161,39 @@
                                 alt="品牌票券"></a>
                     </div>
                     <Br>
+                        <div class="card">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">注意事項</span>
+                        </h3>
+                        <div class="note">
+                            <ul>
+                                <li>
+                                    <p>本活動點數發放及使用時間為：111年7月15日至12月18日，請務必於期間內將點數使用完畢，逾期（111年12月19日起）將無法再進行使用。</p>
+                                </li>
+                                <li>
+                                    <p>每組手機號碼及身分證僅能註冊「市民卡紅利桃子」一次，註冊資料無法重複填寫及任意更改，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動資格。請確實填寫有效之資料，若登錄或個人資料填寫不實、錯誤、不完整、無法辨識、虛構、偽造、盜用等，視同自動放棄中獎資格。</p>
+                                </li>
+                                <li>
+                                    <p>特約商家點數折抵事宜在不違反點數基本使用原則下（如台幣與點數比值1：1等），請依各店家公告為準。本系統開放72小時內退點機制，民眾如有退點需求請自行與商家協商處理。</p>
+                                </li>
+                                <li>
+                                    <p>本活動之網路登入或有效紀錄，均以本府電腦系統之紀錄與認定為準。本府有權檢視各行為是否涉嫌人為操作，對於蓄意偽造、詐欺或為其他不正當交易，本府保有取消中獎資格之權利，並保留法律追訴權。</p>
+                                </li>
+                                <li>
+                                    <p>活動辦法、中獎名單及相關事宜，請依本次活動網站公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
+                                </li>
+                                <li>
+                                    <p>如需洽詢「市民卡紅利桃子」系統、點數等操作問題，請將問題及相關截圖寄送至<a href="mailto:tycc.app@gmail.com">客服信箱</a>，或於上班時間（平日9:00-17:00）撥打客服專線 03-3322107 由專人為您服務。店家申請問題請洽「<a target="_blank" href="https://lin.ee/wHvq0y7">店家LINE客服</a>」（ID：@736cvdfj，限店家加入）。</p>
+                                </li>
+                                <li>
+                                    <p>經發局「你吃飯我買單」、觀旅局「桃園旅宿千元住宿金搶先用」、農業局「有機蔬菜箱」活動規則請洽各局處洽詢，本單位僅針對得獎名單進行點數發放及針對點數使用及取得問題進行回覆。</p>
+                                </li>
+                                <li>
+                                    <p>如獎項缺貨、停產等原因導致無法供應，將由等值或相似商品進行替換。</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="card">
                         <h3 class="sub-title">
                             <span class="bg-pink">相關連結與合作夥伴</span>
