紅利桃子 - 更新獎品圖

--- a/iiot/peach/peach777.html
+++ b/iiot/peach/peach777.html
@@ -138,7 +138,7 @@
                 </section>
                 <section class="event-content">
                     <div class="card no-bg" id="link01">
-                        <img class="" src="images/777/img-info-01.jpg" width="100%" alt="7大活動 7大好禮 7大功能">
+                        <img class="" src="images/777/img-info-1216.png" width="100%" alt="7大活動 7大好禮 7大功能">
                     </div>
                     <div class="card no-bg">
                         <div class="both clearfix">
