CRM - 新增「立即下架」按鈕 & 列表的「欄位tilte顯示+排序」

--- a/CRM/customer.html
+++ b/CRM/customer.html
@@ -164,6 +164,12 @@
                     </a>
                 </div>
                 <div class="data-list">
+                    <div class="card toptitle-style clearfix">
+                        <h4 class="customer-name">公司/客戶名稱</h4>
+                        <p class="customer-number">統一編號</p>
+                        <p class="customer-contact">聯絡人</p>
+                        <p class="customer-address">地址</p>
+                    </div>
                     <div class="card clearfix">
                         <a class="go-detail" href="customer_info.html">
                             <h4 class="customer-name">佳量企業股份有限公司</h4>
@@ -184,7 +190,7 @@
                             </li>
                             <li>
                                 <a class="delete popup-link" href="#popup-delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -209,7 +215,7 @@
                             </li>
                             <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -255,7 +261,7 @@
                             </li>
                             <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -280,7 +286,7 @@
                             </li>
                             <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -1059,14 +1065,14 @@
             </div>
         </div>
     </section>
-    <!-- popup 下架確認-->
+    <!-- popup 刪除確認-->
     <section id="popup-delete" class="white-popup mfp-hide popup-width-m">
         <div class="popup-container">
             <div class="top-title">
-                <h4><span>下架確認</span></h4>
+                <h4><span>刪除確認</span></h4>
             </div>
             <div class="fillin-box text-center">
-                <p>確定要下架此「客戶」嗎？</p>
+                <p>確定要刪除此「客戶」嗎？</p>
             </div>
             <div class="bottom-btn-tool">
                 <fieldset class="field">
