--- a/CRM/project.html
+++ b/CRM/project.html
@@ -165,6 +165,13 @@
                     </a>
                 </div>
                 <div class="data-list">
+                    <div class="card toptitle-style clearfix">
+                        <h4 class="product-name">專案名稱<span class="icon-sort"><i class="fas fa-sort"></i></span></h4>
+                        <p class="product-valid-period">廣告走期</p>
+                        <div class="order-day click-sort">
+                            <p>建立日期<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                        </div>
+                    </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link" href="#popup-project-info">
                             <h4 class="product-name">年約回饋專案年約回饋專案年約回饋專案年約回饋專案</h4>
@@ -188,8 +195,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued popup-link" href="#popup-discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete popup-link" href="#popup-delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -217,8 +229,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -277,8 +294,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -306,8 +328,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -385,8 +412,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -414,8 +446,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="discontinued">
+                                    <i class="far fa-hand-point-down" title="下架"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a class="delete">
-                                    <i class="far fa-trash-alt" title="下架"></i>
+                                    <i class="far fa-trash-alt" title="刪除"></i>
                                 </a>
                             </li>
                         </ul>
@@ -1035,8 +1072,13 @@
                             </a>
                         </li>
                         <li>
+                            <a class="discontinued popup-link" href="#popup-discontinued">
+                                <i class="far fa-hand-point-down" title="下架"></i>
+                            </a>
+                        </li>
+                        <li>
                             <a class="delete popup-link" href="#popup-delete">
-                                <i class="far fa-trash-alt" title="下架"></i>
+                                <i class="far fa-trash-alt" title="刪除"></i>
                             </a>
                         </li>
                     </ul>
