虛擬市集介面 - 調整popup顯示位置問題

--- a/iiot/TTPUSH_market/index.html
+++ b/iiot/TTPUSH_market/index.html
@@ -125,8 +125,8 @@
             </div>
             <div class="bottom-btn">
                 <input class="btn-style btn-line" type="submit" value="取消">
-                <input class="btn-style btn-pink" type="submit" value="選取確認">
-                <a class="btn-style btn-pink popup-link" href="#popup-ok">選取確認(跳兌換用)</a>
+                <!-- <input class="btn-style btn-pink" type="submit" value="選取確認"> -->
+                <a class="btn-style btn-pink popup-link" href="#popup-ok">選取確認(跳兌換)</a>
             </div>
         </div>
     </section>
