虛擬市集介面 - 修改主視覺標題圖片與popup部分商品圖

--- a/iiot/TTPUSH_market/index.html
+++ b/iiot/TTPUSH_market/index.html
@@ -37,12 +37,19 @@
     <main class="market-container">
         <section class="middle-container">
             <div class="event-content-top">
-                <img class="t1 wow bounce an-repeat" data-wow-duration="2s" src="images/main-title.png" alt="虛擬市集 TTPUSH market">
+                <img class="t1 wow bounce an-repeat" data-wow-duration="2s" src="images/main-title-1223.png" alt="虛擬市集 TTPUSH market">
                 <img src="images/bg.png" width="100%">
                 <a class="btn-01 popup-link" data-wow-duration="3s" href="#popup-store-info-01">
-                    <div class=" wow pulse an-repeat">
+                    <div class=" wow pulse an-repeat user-photos">
                         <img class="over" src="images/done.png" alt="已兌完">
-                        <img src="images/store-01.png" alt="Origin源天然">   
+                        <img src="images/store-01.png" alt="Origin源天然"> 
+                        <!-- 新增的頭像 -->
+                        <div class="img-user" style="background-image: url(images/img-user.jpg); left:-70px; top:-20px; width: 70px; height: 70px; "></div>
+                        <div class="img-user" style="background-image: url(images/img-user.jpg); left:-120px; top:40px; width: 40px; height: 40px; "></div>
+                        <div class="img-user" style="background-image: url(images/img-user.jpg); left:-50px; top:60px; width: 30px; height: 30px; "></div>
+                        <div class="img-user" style="background-image: url(images/img-user.jpg); right:-30px; top:40px; width: 40px; height: 40px; "></div>
+                        <div class="img-user" style="background-image: url(images/img-user.jpg); right:-30px; top:100px; width: 60px; height: 60px; "></div>
+                        <!-- 新增的頭像 END -->
                     </div>
                 </a>
                 <a class="btn-02 popup-link" href="#popup-store-info-02">
@@ -54,7 +61,7 @@
                 <a class="btn-03 popup-link" href="#popup-store-info-03">
                     <div class=" wow pulse an-repeat" data-wow-duration="3s">
                         <img class="over" src="images/done.png" alt="已兌完">
-                        <img src="images/store-03.png" alt="福和成餅店">
+                        <img src="images/store-03-1223.png" alt="福和成餅店">
                     </div>
                 </a>
                 <a class="btn-04 popup-link" href="#popup-store-info-04">
@@ -96,7 +103,7 @@
         <div class="popup-container">
             <div class="store-photo">
                 <img class="over" src="images/done.png" alt="已兌完">
-                <img src="images/photo-01.png" width="100%" alt="">
+                <img src="images/photo-01-1223.png" width="100%" alt="Origin 源天然">
             </div>
             <div class="top-title">
                 <h3><span>Origin 源天然</span></h3>
@@ -134,7 +141,7 @@
     <section id="popup-store-info-02" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="store-photo">
-                <img src="images/photo-02.png" width="100%" alt="">
+                <img src="images/photo-02.png" width="100%" alt="博雅齋茶園">
             </div>
             <div class="top-title">
                 <h3><span>博雅齋茶園</span></h3>
@@ -171,7 +178,7 @@
     <section id="popup-store-info-03" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="store-photo">
-                <img src="images/photo-03.png" width="100%" alt="">
+                <img src="images/photo-03.png" width="100%" alt="福和成餅店">
             </div>
             <div class="top-title">
                 <h3><span>福和成餅店</span></h3>
@@ -204,7 +211,7 @@
     <section id="popup-store-info-04" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="store-photo">
-                <img src="images/photo-04.png" width="100%" alt="">
+                <img src="images/photo-04.png" width="100%" alt="歐巴螞食品有限公司">
             </div>
             <div class="top-title">
                 <h3><span>歐巴螞食品有限公司</span></h3>
@@ -244,7 +251,7 @@
     <section id="popup-store-info-05" class="white-popup mfp-hide">
         <div class="popup-container">
             <div class="store-photo">
-                <img src="images/photo-05.png" width="100%" alt="">
+                <img src="images/photo-05-1223.png" width="100%" alt="山海關">
             </div>
             <div class="top-title">
                 <h3><span>山海關</span></h3>
