quickclick - 新增 popup 菜單上架排程設定

--- a/quickclick/menu.html
+++ b/quickclick/menu.html
@@ -94,6 +94,11 @@
                                     <span><i class="fas fa-download"></i></span>匯出菜單
                                 </a>
                             </li>
+                            <li>
+                                <a class="popup-link" href="popup-menu-schedule.html"">
+                                    <span><i class="fas fa-cog"></i></span>菜單上架排程設定
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="logo">
