--- a/ttpush_ui/service.html
+++ b/ttpush_ui/service.html
@@ -92,7 +92,10 @@
                             <div class="icon background"><img src="icon/coin_trans.png"></div>
                             <span class="fS">金幣交易所</span>
                         </a>
-                        <div class="itemV center width"></div>
+                        <a class="itemV center width" href="i-pass.html">
+                            <div class="icon background"><img class="grayscale" src="icon/i-pass.svg"></div>
+                            <span class="fS">一卡通</span>
+                        </a>
                         <div class="itemV center width"></div>
                     </div>
                 </div>
